unpackaged/main/default/objects/GoExpedi_Integration_Log__c/GoExpedi_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>GoExpedi Integration Log</label>
    <nameField>
        <displayFormat>GIL-{0000}</displayFormat>
        <label>GoExpedi Integration Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoExpedi Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>