unpackaged/main/default/objects/GoExpedi_Integration_Log__c/fields/GoExpedi_Error_ID__c.field-meta.xml
<CustomField>
    <fullName>GoExpedi_Error_ID__c</fullName>
    <externalId>true</externalId>
    <label>GoExpedi Error ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>