unpackaged/main/default/objects/GoExpedi_Integration_Log__c/fields/GoExpedi_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>GoExpedi_Order_Number__c</fullName>
    <label>GoExpedi Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>