unpackaged/main/default/objects/GoExpedi_Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>GoExpedi_Order_Number__c</columns>
    <columns>Message__c</columns>
    <columns>Severity__c</columns>
    <columns>GoExpedi_Error_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>